<resources>
    <string name="app_name">metaparser</string>
    
    <string name="action_new_game">Новая игра</string>
    <string name="action_save_game">Сохранить игру</string>
    <string name="action_load_game">Загрузить игру</string>
    <string name="action_theme">Тема приложения</string>
    <string name="action_theme_light">Светлая</string>
    <string name="action_theme_dark">Тёмная</string>
    <string name="action_theme_default">Системная</string>
    <string name="action_show_voice_button">Кнопка голосового ввода</string>

    <string name="save_menu_text_empty_slot">Пустой слот</string>
    <string name="saves_not_found">Сохранённых игр не найдено</string>
    <string name="game_saved">Игра сохранена</string>
    <string name="game_loaded">Игра загружена</string>

    <string name="activity_game_edittext_hint">Введите команду</string>
    <string name="activity_game_voice_button_accessibility">Голосовой ввод</string>
    <string name="activity_game_send_button_accessibility">Отправить команду</string>

    <string name="span_command_accessibility">Вы ввели,</string>
    
    <string name="dialog_new_game_title">Играть с начала?</string>
    <string name="dialog_new_game_text">Вы действительно хотите начать новую игру? Текущий прогресс будет потерян.</string>
    <string name="dialog_new_game_positive_button">Да</string>
    <string name="dialog_new_game_negative_button">Отмена</string>

    <string name="dialog_save_load_negative_button">Отмена</string>

    <string name="critical_error">Упс..\n\nПроизошла критическая ошибка, приложение остановлено.\n\n%1$s</string>
    <string name="error_delete_autosave_failed">Не удалось удалить autosave</string>
    <string name="error_device_not_support_speech_to_text">Ваше устройство не поддерживает голосовой ввод</string>
</resources>
