<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.emunix.metaparser.ui.game.GameActivity">
    <item
        android:id="@+id/action_new_game"
        android:orderInCategory="100"
        android:title="@string/action_new_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_game"
        android:orderInCategory="120"
        android:title="@string/action_save_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_load_game"
        android:orderInCategory="140"
        android:title="@string/action_load_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/theme"
        android:orderInCategory="200"
        android:title="@string/action_theme"
        app:showAsAction="never">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/theme_light"
                    android:title="@string/action_theme_light" />
                <item
                    android:id="@+id/theme_dark"
                    android:title="@string/action_theme_dark" />
                <item
                    android:id="@+id/theme_default"
                    android:title="@string/action_theme_default" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_show_voice_button"
        android:orderInCategory="220"
        android:checkable="true"
        android:title="@string/action_show_voice_button" />

</menu>
